--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
         compose_version = '1.1.1'
         nav_version = "2.4.2"
     }
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.41'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.3' apply false
